--- a/src/app/orcamentos/orcamentos.page.html
+++ b/src/app/orcamentos/orcamentos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>configuracoes</ion-title>
+    <ion-title>orcamentos</ion-title>
   </ion-toolbar>
 </ion-header>
 
