--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,5 +1,6 @@
 <ion-content padding>
-    <div class="menu">
+    <div class="corpo">
+        <div class="espaco"></div>
         <div class="topo">
         <ion-item> 
             <ion-label position="fixed">Usuário</ion-label>
@@ -16,7 +17,7 @@
             <ion-select-option value="H">HOMOLOGACAO</ion-select-option>
             </ion-select>
         </ion-item> 
-        <ion-button shape="round" fill="solid" color="light">CONECTAR</ion-button>
+        <ion-button shape="round" fill="solid" color="light" float-right  (click)="loginClick()">CONECTAR</ion-button>
        
     </div>
     </div>
