--- a/src/app/pages/enderecos/enderecos.page.html
+++ b/src/app/pages/enderecos/enderecos.page.html
@@ -11,9 +11,12 @@
 
 <ion-content >
   <ion-searchbar showCancelButton placeholder="Buscar Cliente"></ion-searchbar>
-  <ion-list padding>
-    <ion-item *ngFor="let cliente of clientes" (click)="ItemClick()">
-      <ion-label color="secondary">{{cliente}}</ion-label>
+  <ion-list>
+    <ion-list-header>
+          <ion-label><h1>Selecione um Cliente</h1></ion-label>
+    </ion-list-header>
+    <ion-item *ngFor="let cliente of clientes" (click)="ItemClick()" style="--padding-end:16px; font-weight: bold;">
+        <ion-label color="primary" text-wrap>{{cliente}}</ion-label>
     </ion-item>
   </ion-list> 
 </ion-content>
