--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,4 +1,8 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
-}
+.chart-container {
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+  height: 90vh;
+  width: 100vw;
+  display: block;
+  } 
