--- a/src/app/pages/item-editar/item-editar.page.html
+++ b/src/app/pages/item-editar/item-editar.page.html
@@ -1,51 +1,61 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-          <ion-back-button></ion-back-button>
+            <ion-back-button></ion-back-button>
         </ion-buttons>
         <ion-title>
-            Editar Item
+            Item: G00166
         </ion-title>
     </ion-toolbar>
-  </ion-header>
-  
-  <ion-content padding>
-      <ion-item>
-          <ion-label position="floating">Código do Item</ion-label>
-          <ion-input name="codigoItem" type="text" value="G00166"></ion-input>
-          <ion-icon name="search" slot="start"></ion-icon>
-      </ion-item>    
-      <ion-item>
-          <ion-label position="floating">Descrição</ion-label>
-          <ion-input name="codigoItem" type="text" disabled value="Percutaneous Entry Needle Cook® 18 Gauge 7 cm"></ion-input>
-      </ion-item>  
-      <ion-item>
-          <ion-label position="floating">Unidade</ion-label>
-          <ion-input name="unidade" type="text" value="UN - Unidade"></ion-input>
-          <ion-icon name="search" slot="start"></ion-icon>
-      </ion-item>    
-      <ion-item>
-          <ion-label position="floating">Tabela de Preço</ion-label>
-          <ion-input name="tabelaPreco" type="text" value="01 - Tabela de Preço COOK"></ion-input>
-          <ion-icon name="search" slot="start"></ion-icon>
-      </ion-item>  
-      <ion-item>
-          <ion-label position="floating">Preço</ion-label>
-          <ion-input name="preco" type="text" value="R$ 350,00"></ion-input>
-      </ion-item>    
-      <ion-item>
-          <ion-label position="floating">% Desconto</ion-label>
-          <ion-input name="preco" type="text" value="0%"></ion-input>
-      </ion-item>      
-      <ion-item>
-          <ion-label position="floating">Quantidade</ion-label>
-          <ion-input name="diasEntrega" type="text" value="2"></ion-input>
-      </ion-item>   
-      <ion-item>
-          <b>Total: </b>R$ 700,00
-      </ion-item>
-      <br>
-      <ion-button expand="full">
-          <ion-icon name="save" slot="start"></ion-icon> Salvar
-      </ion-button>
-  </ion-content>
+</ion-header>
+
+<ion-content padding>
+    <ion-item>
+        <ion-label position="floating">Código do Item</ion-label>
+        <ion-input name="codigoItem" type="text" value="G00166"></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Descrição</ion-label>
+        <ion-input name="codigoItem" type="text" disabled value="Percutaneous Entry Needle Cook® 18 Gauge 7 cm"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Unidade</ion-label>
+        <ion-input name="unidade" type="text" value="UN - Unidade"></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Tabela de Preço</ion-label>
+        <ion-input name="tabelaPreco" type="text" value="01 - Tabela de Preço COOK"></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Preço</ion-label>
+        <ion-input name="preco" type="text" value="R$ 350,00"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">% Desconto</ion-label>
+        <ion-input name="preco" type="text" value="0%"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Quantidade</ion-label>
+        <ion-input name="diasEntrega" type="text" value="2"></ion-input>
+    </ion-item>
+    <ion-item style="--padding-start: 0px" lines="none">
+        <ion-label style="padding-left: 16px"><b>Total: </b>R$ 700,00</ion-label>
+    </ion-item>
+</ion-content>
+<ion-footer>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-button color="danger">
+                <ion-icon slot="start" name="calculator"></ion-icon>
+                Impostos
+            </ion-button>
+            <ion-button color="success">
+                <ion-icon slot="start" name="save"></ion-icon>
+                Salvar
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
+</ion-footer>
