--- a/src/app/pages/orcamento-novo/orcamento-novo.page.html
+++ b/src/app/pages/orcamento-novo/orcamento-novo.page.html
@@ -1,18 +1,18 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-          <ion-back-button></ion-back-button>
+            <ion-back-button></ion-back-button>
         </ion-buttons>
         <ion-title>
-            Orçamento
+            Novo Orçamento
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-    <ion-fab  vertical="top" horizontal="end" slot="fixed">
-        <ion-fab-button>
-            <ion-icon name="cart"></ion-icon>
+    <ion-fab vertical="top" horizontal="end" slot="fixed">
+        <ion-fab-button color="secondary" disabled>
+            <ion-icon name="list-box"></ion-icon>
         </ion-fab-button>
     </ion-fab>
     <br>
@@ -21,47 +21,62 @@
     </ion-item>
     <br>
     <ion-item>
-            <ion-label position="floating">Cliente</ion-label>
-            <ion-input name="cliente" type="text"></ion-input>
-            <ion-icon name="search" slot="start"></ion-icon>
-      </ion-item>  
+        <ion-label position="floating">Cliente</ion-label>
+        <ion-input name="cliente" type="text"></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
 
-      <ion-item>
-          <ion-label position="floating">Endereço de Entrega</ion-label>
-          <ion-input name="enderecoEntrega" type="text"></ion-input>
-          <ion-icon name="search" slot="start"></ion-icon>
-      </ion-item>
+    <ion-item>
+        <ion-label position="floating">Endereço de Entrega</ion-label>
+        <ion-input name="enderecoEntrega" type="text"></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
 
-      <ion-item>
-          <ion-label position="floating">Condição de Pagamento</ion-label>
-          <ion-input name="condicaoPagamento" type="text"></ion-input>
-          <ion-icon name="search" slot="start"></ion-icon>
-      </ion-item>
+    <ion-item>
+        <ion-label position="floating">Condição de Pagamento</ion-label>
+        <ion-input name="condicaoPagamento" type="text"></ion-input>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
 
-      <ion-item>
-          <ion-label position="floating">Tipo de Entrega</ion-label>
+    <ion-item>
+        <ion-label position="floating">Tipo de Entrega</ion-label>
         <ion-input name="tipoEntrega" type="text"></ion-input>
-        <ion-icon name="search" slot="start"></ion-icon>
-      </ion-item>      
-      
-      <ion-item>
-          <ion-label position="stacked">Validade</ion-label>
-          <ion-input name="validade" type="date"></ion-input>
-      </ion-item>
-
-      <ion-item>
-          <ion-label position="floating">Dias para entrega</ion-label>
-          <ion-input name="diasEntrega" type="number" max="15" mim="3"></ion-input>
-      </ion-item>   
-
-      <ion-item>
-          <ion-label position="floating">Valor do Frete</ion-label>
-          <ion-input name="valorFrete" type="number"></ion-input>
-      </ion-item>
-
-      <br>
-          <ion-button expand="full">
-            <ion-icon slot="start" name="paper-plane"></ion-icon>
-            Enviar Orçamento
-          </ion-button>
+        <ion-icon name="search" slot="end"></ion-icon>
+    </ion-item>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="6">
+                <ion-item>
+                    <ion-label position="stacked">Validade</ion-label>
+                    <ion-input name="validade" type="date"></ion-input>
+                </ion-item>
+            </ion-col>
+            <ion-col size="6">
+                <ion-item>
+                    <ion-label position="floating">Dias entrega</ion-label>
+                    <ion-input name="diasEntrega" type="number" max="15" mim="3"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-item>
+        <ion-label position="floating">Valor do Frete</ion-label>
+        <ion-input name="valorFrete" type="number"></ion-input>
+    </ion-item>
 </ion-content>
+<ion-footer>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-button color="light" disabled>
+                <ion-icon slot="start" name="calculator"></ion-icon>
+                Impostos
+            </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="secondary">
+            <ion-button color="success" disabled>
+                <ion-icon slot="start" name="save"></ion-icon>
+                Salvar
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
+</ion-footer>
