--- a/src/app/pages/orcamentos/orcamentos.page.html
+++ b/src/app/pages/orcamentos/orcamentos.page.html
@@ -12,7 +12,7 @@
         <ion-label>
             <h1><b>Em aprovação</b></h1>
         </ion-label>
-        <ion-button (click)="showMenu()" expand="full">
+        <ion-button (click)="showMenu($event)" expand="full">
             Ordernar
             <ion-icon slot="start" name="funnel"></ion-icon>
         </ion-button>
